--- a/crates/data_generator/Cargo.toml
+++ b/crates/data_generator/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.23", features = ["derive"] }
+ndarray = "0.16.1"
+ndarray-npy = { version = "0.9.1", default-features = false, features = ["compressed_npz"] }
 num_cpus = "1.16.0"
 ramsey_theory = { path = "../ramsey_theory" }
 rand = "0.8.5"
