ndarray as opt-in feature

--- a/crates/data_generator/Cargo.toml
+++ b/crates/data_generator/Cargo.toml
@@ -8,5 +8,5 @@ clap = { version = "4.5.23", features = ["derive"] }
 ndarray = "0.16.1"
 ndarray-npy = { version = "0.9.1", default-features = false, features = ["compressed_npz"] }
 num_cpus = "1.16.0"
-ramsey_theory = { path = "../ramsey_theory" }
+ramsey_theory = { path = "../ramsey_theory", features = ["ndarray"] }
 rand = "0.8.5"
