--- a/crates/ramsey_theory/Cargo.toml
+++ b/crates/ramsey_theory/Cargo.toml
@@ -4,5 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-ndarray = "0.16.1"
+ndarray = { version = "0.16.1", optional = true }
 rand = "0.8.5"
+
+[features]
+default = []
+ndarray = ["dep:ndarray"]
