--- a/crates/data_generator/Cargo.toml
+++ b/crates/data_generator/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = "0.4.39"
 clap = { version = "4.5.23", features = ["derive"] }
 ndarray = "0.16.1"
 ndarray-npy = { version = "0.9.1", default-features = false, features = ["compressed_npz"] }
