--- a/crates/data_generator/Cargo.toml
+++ b/crates/data_generator/Cargo.toml
@@ -2,6 +2,7 @@
 name = "data_generator"
 version = "0.1.0"
 edition = "2024"
+authors = ["Romain Ageron <ageron.r@gmail.com>"]
 
 [dependencies]
 chrono = "0.4.39"
