--- a/crates/ramsey_theory/Cargo.toml
+++ b/crates/ramsey_theory/Cargo.toml
@@ -2,6 +2,7 @@
 name = "ramsey_theory"
 version = "0.1.0"
 edition = "2024"
+authors = ["Romain Ageron <ageron.r@gmail.com>"]
 
 [dependencies]
 ndarray = { version = "0.16.1", optional = true }
