--- a/cargo.toml
+++ b/cargo.toml
@@ -1,6 +1,4 @@
-[workspace]
-members = [
-    "crates/data_generator",
-    "crates/ramsey_theory",
-]
-resolver = "2"
+[package]
+name = "reproduce_crash"
+version = "0.1.0"
+edition = "2024"
